# newmodule

./: .gitignore  README.md  README2.md  pyproject.toml
src/demo_module_io/: cli.py  io_tools.py
src/demo_module_math/: cli.py
